--- a/clase-9-eventos/index.html
+++ b/clase-9-eventos/index.html
@@ -67,6 +67,7 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script src="./index_eventos.js"></script>
+    <!-- <script src="./index_eventos.js"></script> -->
+    <script src="./index_eventos_storage.js"></script>
   </body>
 </html>
