--- a/clase-06-arrays/simulador-de-compras/index.html
+++ b/clase-06-arrays/simulador-de-compras/index.html
@@ -4,9 +4,10 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Tienda de alfajores</title>
     </head>
     <body>
-        <script src="./simulador_de_compras.js"></script>
+        <script src="./simulador_de_compras_sin_comentarios.js"></script>
+        <!-- <script src="./simulador_de_compras.js"></script> -->
     </body>
 </html>
