--- a/clase-09-eventos-storage-peliculas/index.html
+++ b/clase-09-eventos-storage-peliculas/index.html
@@ -24,7 +24,7 @@
         <div id="listado"></div>
 
         <div id="listadoFavoritos"></div>
-
+        <!-- <script src="./index.js"></script> -->
         <script src="01_CreandoInstancias.js"></script>
     </body>
 </html>
