--- a/clase-06-arrays/simulador-carga-de-alumnos/index.html
+++ b/clase-06-arrays/simulador-carga-de-alumnos/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Carga de datos de alumnos</title>
     </head>
     <body>
-        <script src="./arrays_simulador_de_stock.js"></script>
+        <script src="./carga_de_alumnos.js"></script>
     </body>
 </html>
