--- a/clase-09-eventos-storage-peliculas/index.html
+++ b/clase-09-eventos-storage-peliculas/index.html
@@ -14,7 +14,7 @@
         <button id="mostrarMenu">Mostrar menu</button>
         <div id="menuAgregar" class="oculto">
             <form id="formularioPeliculas">
-                <input id="nombre" type="text" autocomplete="off" placeholder="Nombre" />
+                <input id="nombre" type="text" autocomplete="off" placeholder="Nombre" required />
                 <input id="duracion" type="number" autocomplete="off" placeholder="Duracion" />
                 <input id="genero" type="text" autocomplete="off" placeholder="Genero" />
                 <input id="btn" type="submit" value="Agregar Pelicula" />
@@ -23,7 +23,7 @@
 
         <div id="listado"></div>
 
-        <div id="listadoFavoritos"></div>
+        <!-- <div id="listadoFavoritos"></div> -->
         <!-- <script src="./index.js"></script> -->
         <script src="01_CreandoInstancias.js"></script>
     </body>
